# PulseVideoGen

./: .README.md.kate-swp  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_static.sh  main.cpp  package_release.sh
build_static/: version.h
src/: main.cpp  version.h.in
